--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -305,7 +305,11 @@
 <!-- <div class="col-sm-5"> -->
 
   <app-disp>
-<app-user></app-user>
+
+  </app-disp>
+
+  <app-disp>
+
   </app-disp>
  
 <!-- </div> -->
