--- a/src/app/app.user.html
+++ b/src/app/app.user.html
@@ -1,6 +1,8 @@
+<div class="container-fluid">
 
-    <div class="col-sm-5" >
-  
+  <div *ngIf="!user">
+    <div class="col-sm-2" >
+      
       <input #phone placeholder="user name" class="form-control "  />
   </div>
   <br>
@@ -8,18 +10,40 @@
   
   <!-- phone refers to the input element; pass its `value` to an event handler -->
   <button type="button" class="btn btn-primary "  (click)="login(phone.value)">Join</button>
-  <div class="col-sm-5" >
+
+
+
+
+</div>
+<div *ngIf="user">
+  <i>
+ 
+Current Members:
+</i>
+
+<p>
+<tr *ngFor="let user of getUsersByChannelName()">
+  
+    @{{user}}
+  </tr>
+</p>
+</div>
+
+</div>
+
+
+
+<!-- CREATE CHANNEL HTML -->
+<!-- <div class="col-sm-5" >
   
     <input #channel placeholder="create a channel" class="form-control "  />
   </div>
   <br>
-  <!-- lots of other elements -->
-  
-  <!-- phone refers to the input element; pass its `value` to an event handler -->
+
   <button type="button" class="btn btn-primary "  (click)="createChannel(channel.value)">create Channel</button>
-  <div *ngFor='let user of users' class="col">
+
     <app-chat [userName]="user"></app-chat>
-    <hr>
-  </div>  
+    <hr> -->
+
   
  
