--- a/src/app/app.user.html
+++ b/src/app/app.user.html
@@ -10,6 +10,7 @@
   
   <!-- phone refers to the input element; pass its `value` to an event handler -->
   <button type="button" class="btn btn-primary "  (click)="login(phone.value)">Join</button>
+  <!-- <button type="button" class="btn btn-primary "  *ngIf="user">Logout</button> -->
 
 
 
