--- a/src/app/app.user.html
+++ b/src/app/app.user.html
@@ -28,6 +28,9 @@ Current Members:
     @{{user}}
   </tr>
 </p>
+<p>
+   <!-- <button type="button" class="btn btn-primary " (click)="user=''"  *ngIf="user">Logout</button> -->
+</p>
 </div>
 
 </div>
