--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -304,13 +304,10 @@
 <div class="row">
 <!-- <div class="col-sm-5"> -->
 
-  <app-disp>
+  <app-disp></app-disp>
+  <br>
 
-  </app-disp>
-
-  <app-disp>
-
-  </app-disp>
+  <app-disp></app-disp>
  
 <!-- </div> -->
 
